# beatsavercli

api/: Cargo.toml  README.md
api/.openapi-generator/: FILES
api/src/apis/: configuration.rs  default_api.rs
api/src/models/: auth_request.rs  instant.rs  map_detail.rs  map_detail_metadata.rs  map_difficulty.rs  map_parity_summary.rs  map_stats.rs  map_testplay.rs  map_version.rs  mod.rs  search_response.rs  user_detail.rs  user_diff_stats.rs  user_stats.rs  verify_response.rs  vote_request.rs  vote_response.rs  vote_summary.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
