[package]
name = "beatsavercli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beatsaver = {path = "../api" }
clap = {version = "3.0.0-beta.4", features = ["color", 'suggestions'] }
tokio = { version = "1", features = ["rt", "macros"] }
bytes = "1"
zip = "0.5"
dynfmt = { version = "0.1.5", features = ["curly"] }
serde = "1.0"